[package]
name = "cupholder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
viuer = "0.7.1"
windows = { version = "0.58.0", features = ["Win32_Media_Multimedia"] }
